ejemplo1/mongodb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb
    type: backend
spec:
  containers:
  - name: mongodb
    image: mongo:latest
    ports:
    - containerPort: 27017
  # resources:
  #   limits:  
  #     memory: "128Mi"
  #     cpu: "500m"
