ejemplo1/mongoexpress-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-express
  labels:
    app: mongo-express
    type: frontend
spec:
  containers:
  - name: mongo-express
    image: mongo-express:latest
    ports:
    - containerPort: 8081
#    resources:
#          limits:
#            memory: "128Mi"
#            cpu: "500m"
