ejemplo1/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodbservice
  labels:
    type: backend
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
