ejemplo1/mongoexpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
  labels:
    type: frontend
spec:
#  type: LoadBalancer
  selector:
    app: mongo-express
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
#    nodePort: 32010
